package br.edu.ifsc.fln.domain;

public interface Agendavel {
    public void agendarConsulta(Consulta consulta);
}
