package br.edu.ifsc.fln.domain;

public enum Prioridade {
    ALTA, MEDIA, BAIXA;
}
