package br.edu.ifsc.fln.exceptions;

public class MedicamentoIndicadoException extends Exception {
  public MedicamentoIndicadoException(String message) {
    super(message);
  }
}
